OpenAPI and Swagger add -- plus start to mix in messaging queues

--- a/quarkus-customer-order/src/main/resources/application.properties
+++ b/quarkus-customer-order/src/main/resources/application.properties
@@ -10,3 +10,20 @@ quarkus.mongodb.database=${MONGO_DB_NAME:quarkus_order_db}
 # SLF4J logging
 quarkus.log.level=INFO
 quarkus.log.category."com.example".level=DEBUG
+
+# OpenAPI configuration
+quarkus.smallrye-openapi.info-title=Customer Order API
+quarkus.smallrye-openapi.info-description=API for managing customers and orders.
+quarkus.smallrye-openapi.info-version=1.0.0
+quarkus.swagger-ui.always-include=true
+
+# RabbitMQ configuration
+rabbitmq-host=localhost
+rabbitmq-port=5672
+rabbitmq-username=guest
+rabbitmq-password=guest
+
+# Reactive Messaging configuration
+mp.messaging.outgoing.customer-creations.connector=smallrye-rabbitmq
+mp.messaging.incoming.customer-creations-in.connector=smallrye-rabbitmq
+mp.messaging.incoming.customer-creations-in.queue.name=customer-creations
