--- a/spring-customer-order/src/main/resources/application.properties
+++ b/spring-customer-order/src/main/resources/application.properties
@@ -14,3 +14,18 @@ spring.data.mongodb.database=${MONGO_DB_NAME:spring_order_db}
 logging.level.root=INFO
 logging.level.com.example.spring=DEBUG
 logging.level.org.springframework.web=INFO
+
+# SpringDoc OpenAPI configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operations-sorter=alpha
+springdoc.swagger-ui.tags-sorter=alpha
+springdoc.info.title=Customer Order API
+springdoc.info.description=API for managing customers and orders.
+springdoc.info.version=1.0.0
+
+# RabbitMQ configuration
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
